# vray-for-houdini

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.txt  cmake_ninja_linux.sh  cmake_ninja_windows.bat
cmake/: vfh_clone_plugins_desc.cmake.in  vfh_compiler.cmake  vfh_houdini.cmake  vfh_macro.cmake  vfh_pack.cmake.in  vfh_phoenix.cmake  vfh_shell_wrapper.cmake.in  vfh_vray_osl.cmake  vfh_vrayappsdk.cmake  vfh_vraysdk.cmake  vfh_xpak.cmake
deploy/: hfs.bat  hfs.bat.in  hfs.local.bat.in  hfs.local.osx.sh.in  hfs.local.sh.in  hfs_linux.sh.in  hfs_osx.sh.in  houdini.dev.env  houdini.dev.evn  houdini.env  sesitag.txt  vfh.shelf  vfh_obj.shelf  vfh_rop.shelf  vfh_shop.shelf  vfh_vop.shelf  vfhlightdome.bgeo
launcher/: CMakeLists.txt  README.md  launcher.cpp  string_defines.h.in  vfh_launcher.cpp  vfh_launcher.rc
src/: CMakeLists.txt  vfh_class_utils.h  vfh_defines.h  vfh_dso_version.h  vfh_includes.h  vfh_pch.cpp  vfh_pch.h  vfh_register.c  vfh_register.cpp  vfh_render.cpp  vfh_render.h  vfh_typedefs.h
src/cmd/: vfh_cmd_register.cpp  vfh_cmd_register.h  vfh_cmd_vrayproxy.cpp  vfh_cmd_vrayproxy.h
src/export/: vfh_export_context.cpp  vfh_export_context.h  vfh_export_light.cpp  vfh_export_material.cpp  vfh_export_object.cpp  vfh_export_view.cpp  vfh_export_view.h  vfh_exporter.cpp  vfh_exporter.h  vfh_plugin_attrs.cpp  vfh_plugin_attrs.h  vfh_plugin_exporter.cpp  vfh_plugin_exporter.h  vfh_vray.h  vfh_vray_cloud.cpp  vfh_vray_cloud.h
src/export/export/: vfh_export_geom.cpp  vfh_export_geom.h  vfh_export_hair.cpp  vfh_export_hair.h  vfh_export_hdk_shaders.cpp  vfh_export_mesh.cpp  vfh_export_mesh.h  vfh_export_op.cpp  vfh_export_particles.cpp  vfh_export_primitive.cpp  vfh_export_primitive.h  vfh_export_texture.cpp  vfh_export_vop.cpp  vfh_export_vop.h  vfh_export_vrayproxy.cpp  vfh_export_vrayproxy.h  vfh_material_override.cpp  vfh_material_override.h  vfh_mesh_utils.h
src/export/utils/: vfh_ga_utils.cpp  vfh_ga_utils.h  vfh_geoutils.cpp  vfh_geoutils.h  vfh_gu_utils.cpp  vfh_gu_utils.h  vfh_tex_utils.cpp  vfh_tex_utils.h  vfh_utils_vrmesh.cpp  vfh_utils_vrmesh.h  vfh_vrayproxy_exporter.cpp  vfh_vrayproxy_exporter.h
src/gu/: DetailCachePrototype.h  gu_geomplaneref.cpp  gu_geomplaneref.h  gu_pgyeti.cpp  gu_pgyeti.h  gu_volumegridref.cpp  gu_volumegridref.h  gu_vrayproxyref.cpp  gu_vrayproxyref.h  gu_vraysceneref.cpp  gu_vraysceneref.h  vfh_gu_base.cpp  vfh_gu_base.h  vfh_gu_cache.h
src/gu/options/: vfh_gu_options.py
src/gu/options/json/: GeomPlaneRef.json  VRayPgYetiRef.json  VRayProxyRef.json  VRaySceneRef.json  VRayVolumeGridRef.json
src/io/: io_vrmesh.cpp  io_vrmesh.h  io_vrscene.cpp  io_vrscene.h
src/ipr/: CMakeLists.txt  main.cpp  moc_vfh_ipr_server.cpp  vfh_ipr_checker.h  vfh_ipr_checker_types.h  vfh_ipr_server.cpp  vfh_ipr_server.h
src/ipr/python/: CMakeLists.txt  vfh_ipr.cpp  vfh_ipr_checker.cpp  vfh_ipr_checker.h  vfh_ipr_client.cpp  vfh_ipr_client.h  vfh_ipr_imdisplay_viewer.cpp  vfh_ipr_imdisplay_viewer.h  vfh_ipr_viewer.cpp  vfh_ipr_viewer.h  vfh_process_check.h  vfh_process_check_linux.cpp  vfh_process_check_win32.cpp
src/lib/: vfh_vray_instances.cpp  vfh_vray_instances.h
src/op/: op_node_base.cpp  op_node_base.h
src/rop/: rop_vrayproxyrop.cpp  rop_vrayproxyrop.h  vfh_rop.cpp  vfh_rop.h
src/sop/: gu_volumegridref.cpp  gu_volumegridref.h  gu_vrayproxyref.cpp  gu_vrayproxyref.h  sop_GeomDisplacedMesh.cpp  sop_GeomDisplacedMesh.h  sop_GeomMayaHair.cpp  sop_GeomMayaHair.h  sop_GeomPlane.cpp  sop_GeomPlane.h  sop_GeomStaticSmoothedMesh.cpp  sop_GeomStaticSmoothedMesh.h  sop_PhoenixCache.cpp  sop_PhoenixCache.h  sop_node_base.cpp  sop_node_base.h  sop_node_def.h  sop_pgyeti.cpp  sop_pgyeti.h  sop_vrayproxy.cpp  sop_vrayproxy.h  sop_vrayproxyrop.cpp  sop_vrayproxyrop.h  sop_vrayscene.cpp  sop_vrayscene.h  vfh_vrayproxycache.cpp  vfh_vrayproxycache.h  vfh_vrayproxyutils.cpp  vfh_vrayproxyutils.h
src/ui/: vfh_ui.cpp  vfh_ui.h  vfh_vfb.cpp  vfh_vfb.h
src/utils/: vfh_attr_utils.cpp  vfh_attr_utils.h  vfh_data_cache.h  vfh_error.cpp  vfh_error.h  vfh_gpu_device_select.cpp  vfh_gpu_device_select.h  vfh_hashes.cpp  vfh_hashes.h  vfh_hou_utils.cpp  vfh_hou_utils.h  vfh_log.cpp  vfh_log.h  vfh_lru_cache.hpp  vfh_op_utils.cpp  vfh_op_utils.h  vfh_phx_channels_utils.cpp  vfh_phx_channels_utils.h  vfh_phx_utils.cpp  vfh_phx_utils.h  vfh_plugin_info.cpp  vfh_plugin_info.h  vfh_primitives.h  vfh_prm_def.cpp  vfh_prm_def.h  vfh_prm_defaults.cpp  vfh_prm_defaults.h  vfh_prm_globals.cpp  vfh_prm_globals.h  vfh_prm_json.cpp  vfh_prm_json.h  vfh_prm_templates.cpp  vfh_prm_templates.h  vfh_sys_utils.cpp  vfh_sys_utils.h
src/vop/: vop_context.cpp  vop_context.h  vop_node_base.cpp  vop_node_base.h  vop_node_osl.cpp  vop_node_osl.cpp~RF4835fd64.TMP  vop_node_osl.h
src/vop/brdf/: vop_BRDFLayered.cpp  vop_BRDFLayered.h  vop_BRDFScanned.cpp  vop_BRDFScanned.h  vop_BRDFToonMtl.cpp  vop_BRDFToonMtl.h  vop_BRDFVRayMtl.cpp  vop_BRDFVRayMtl.h  vop_brdf_def.h  vop_brdfdiffuse.cpp  vop_brdfdiffuse.h  vop_brdfvraymtl.cpp  vop_brdfvraymtl.h
src/vop/env/: vop_SettingsEnvironment.cpp  vop_SettingsEnvironment.h  vop_env_context.cpp  vop_env_context.h  vop_env_def.h
src/vop/material/: vop_GeomDisplacedMesh.cpp  vop_GeomDisplacedMesh.h  vop_GeomStaticSmoothedMesh.cpp  vop_GeomStaticSmoothedMesh.h  vop_MaterialOutput.cpp  vop_MaterialOutput.h  vop_MtlMulti.cpp  vop_MtlMulti.h  vop_MtlVRayMesh.cpp  vop_MtlVRayMesh.h  vop_PhoenixSim.cpp  vop_PhoenixSim.h  vop_mtl_def.h
src/vop/meta/: vop_meta_def.h  vop_meta_image_file.cpp  vop_meta_image_file.h
src/vop/rc/: vop_rc_container.cpp  vop_rc_container.h  vop_rc_context.cpp  vop_rc_context.h  vop_rc_def.h
src/vop/texture/: vfh_TexMulti.cpp  vfh_TexMulti.h  vop_TexFalloff.cpp  vop_TexFalloff.h  vop_TexGradRamp.cpp  vop_TexGradRamp.h  vop_TexLayered.cpp  vop_TexLayered.h  vop_TexLayeredMax.cpp  vop_TexLayeredMax.h  vop_TexOSL.cpp  vop_TexOSL.h  vop_TexRemap.cpp  vop_TexRemap.h  vop_texture_def.h  vop_texture_output.cpp  vop_texture_output.h
src/vop/uvwgen/: vop_uvwgen_def.h
test/api/: CMakeLists.txt  main.cpp
(+1006 files in other folders)
